--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url(style/header.css);
 @import url(style/banner.css);
 @import url(style/metricas.css);
+@import url(style/talentos.css);
 
 /* fonte */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
