--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import url(style/talentos.css);
 @import url(style/vagas.css);
 @import url(style/depoimentos.css);
+@import url(style/rodape.css);
 
 /* fonte */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
