--- a/style/banner.css
+++ b/style/banner.css
@@ -13,7 +13,7 @@
 
 .banner h1 {
     color: var(--preto);
-    font-size: 48px;
+    font-size: 3em;
     font-weight: 600;
     margin: 24px 0 36px 0;
 }
