--- a/style/depoimentos.css
+++ b/style/depoimentos.css
@@ -11,18 +11,18 @@
     align-items: center;
     text-align: center;
 
-    padding: 64px 0;
+    padding: 4em 0;
 }
 
 .depoimentos-content span {
-    font-size: 14px;
+    font-size: 1em;
     font-weight: 600;
     color: var(--vinho);
-    margin-bottom: 16px;
+    margin-bottom: 1em;
 }
 
 .depoimentos-content h2 {
-    font-size: 36px;
+    font-size: 2.25em;
     line-height: 44px;
     font-weight: 500;
     color: var(--preto);
