--- a/style/rodape.css
+++ b/style/rodape.css
@@ -10,28 +10,29 @@
 }
 
 .rodape-content h2 {
-    font-size: 36px;
+    font-size: 2.25em;
     font-weight: 600;
-    line-height: 44px;
+    line-height: 2.75em;
     color: var(--preto);
     margin-bottom: 20px;
 }
 
 .rodape-content p {
-    font-size: 20px;
+    font-size: 1.25em;
     color: var(--cinza-claro);
-    margin-bottom: 40px;
+    margin-bottom: 2.5em;
 }
 
 .rodape-email {
     display: flex;
     flex-direction: row;
-    gap: 8px;
-    margin-bottom: 32px;
+    gap: 0.5em;
+    margin-bottom: 2em;
 }
 
 .rodape-content .rodape-email input {
-    padding: 12px 14px 12px 16px;
+    width: 360px;
+    height: 48px;
     background: #FFFFFF;
     border: 1px solid #D0D5DD;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
@@ -39,11 +40,14 @@
 }
 
 .rodape-content .rodape-email input::placeholder {
+    font-size: 1em;
     color: var(--cinza-claro);
     font-family: var(--fonte-principal);
+    padding: 12px 14px 12px 16px;
 }
 
 .rodape-content .rodape-email button {
+    font-size: 1em;
     padding: 12px 20px;
     color: var(--branco);
     background: #8E2424;
@@ -56,5 +60,5 @@
 }
 
 .rodape-content .copyright {
-    font-size: 16px;
+    font-size: 1em;
 }
