--- a/style/talentos.css
+++ b/style/talentos.css
@@ -10,19 +10,23 @@
 
 .talentos-content span {
     color: var(--vinho);
-    font-size: 14px;
+    font-size: 1em;
     font-weight: 500;
 }
 
 .talentos-content h2 {
     color: var(--preto);
-    font-size: 44px;
+    font-size: 2.75em;
     font-weight: 600;
     margin: 20px 0;
 }
 
 .talentos-content p {
-    font-size: 20px;
+    font-size: 1.25em;
     color: var(--cinza-claro);
-    margin-bottom: 64px;
+    margin-bottom: 36px;
+}
+
+.talentos-content img {
+    width: 100%;
 }
